samples/_failures_safe/1761479688_e64e6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c99108a.c: In function ‘main’:
./samples/SAFE/__tmp_5c99108a.c:138:16: error: missing terminating " character
  138 |         printf("
      |                ^
./samples/SAFE/__tmp_5c99108a.c:138:9: error: expected expression at end of input
  138 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_5c99108a.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5c99108a.c:138:9: error: expected declaration or statement at end of input
